# Home_Work_Web_10

./: pyproject.toml
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/quotes/: forms.py  models.py  utils.py  views.py
mysite/quotes/migrations/: 0001_initial.py
mysite/quotes/templates/quotes/: add_quote.html  base.html  index.html
mysite/users/: apps.py
mysite/users/templates/users/: signup.html
mysite/utils/: add_q_to_mongo.py  authors.json  migration.py  quotes.json
